# esp32p4-waves

./: CMakeLists.txt  README.md  chat_context.md  partitions.csv  pc_streamer.py  sdkconfig.defaults
main/: CMakeLists.txt  app_video.c  camera.c  camera.h  idf_component.yml  main.cpp  sd_card.c  sd_card.h  wifi.c  wifi.h
main/core/: event_bus.cpp  event_bus.h  service.h  service_manager.h
main/demo/: demo.c  demo.h  demo_apps.c  demo_flipclock.c  demo_pages.c  demo_wifi.c  demo_wifi.h
main/luf/: luf.c  luf.h  luf_conf.h
main/luf/core/: luf_app.c  luf_app.h  luf_app_mgr.c  luf_app_mgr.h  luf_desktop.c  luf_desktop.h  luf_gesture.c  luf_gesture.h  luf_notify.c  luf_notify.h  luf_statusbar.c  luf_statusbar.h
main/luf/port/: luf_osal.h  luf_osal_freertos.c
main/services/: audio_c_api.cpp  audio_c_api.h  audio_mDNS_service.cpp  audio_mDNS_service.h  camera_service.cpp  camera_service.h  display_service.cpp  display_service.h  jpeg_decoder.c  jpeg_decoder.h  sdcard_service.cpp  sdcard_service.h  wifi_service.cpp  wifi_service.h  yolo_c_api.h  yolo_service.cpp  yolo_service.h
main/services/system/: OTA_c_api.h  OTA_service.cpp  OTA_service.h  time_service.cpp  time_service.h
